...
    <string name="status_syncing_off">Syncing disabled</string>

    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <!-- Used to confirm acceptance of dialog boxes, warnings, errors, etc. -->
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
...
